Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11470

JSON_KEYS accepts arguments in invalid format

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.3
    • JSON

    Description

      Compare:

      MariaDB 10.2

      MariaDB [test]> SELECT JSON_KEYS('foo');
      +------------------+
      | JSON_KEYS('foo') |
      +------------------+
      | NULL             |
      +------------------+
      1 row in set (0.00 sec)
      

      MySQL 5.7

      MySQL [test]> SELECT JSON_KEYS('foo');
      ERROR 3141 (22032): Invalid JSON text in argument 1 to function json_keys: "Invalid value." at position 1.
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.