MDEV-11470 JSON_KEYS accepts arguments in invalid format.

Now JSON functions return warnings if arguments are invalid.